# System-Font-Replacer

./: .gitmodules  .hgignore  .hgtags  Dockerfile  Makefile.am  README.md  bootstrap  configure.ac  copy-pua.py  docker-build.sh  merge-fonts.py
.github/workflows/: build.yml
assets/: banner.xcf  icon.xcf
helper-app/: Makefile.am  README.md  configure.ac
helper-app/assets/: icon.xcf
helper-app/m4/: devkitpro_wut.m4
helper-app/src/: bps.cpp  bps.hpp  crc32.cpp  crc32.hpp  main.cpp
src/: main.cpp
